--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -142,8 +142,8 @@
   }
   
   .testimonials .testimonial-item .testimonial-img {
-    width: 120px;
-    border-radius: 50%;
+    height:300px;
+    width: 200px;
     border: 4px solid #fff;
     margin: 0 auto;
   }
